feat: clean up my mess
Adds custom serializer, units formatter and reduces code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,11 @@
 [package]
 name = "amdgpu"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
+
+[profile.release]
+lto = true
+strip = true
+codegen-units = 1
 
 [dependencies]
